# PWMCilver

./: .gitignore  CMakeLists.txt
src/: App.qml  Backend.cpp  Backend.h  BluetoothSerial.h  CMakeLists.txt  MotorInfo.h  PWMCilver_en_US.ts  PWMCilver_zh_CN.qm  PWMCilver_zh_CN.ts  blecontroller.cpp  blecontroller.h  blemanager.cpp  blemanager.h  main.cpp  main.qml  qml.qrc  serialdebugbackend.cpp  serialdebugbackend.h
src/canvas/: ControlPanel.qml  DebugConsole.qml  SimulationCanvas.qml
src/component/: IndoorSettings.qml  LightSettings.qml  SensorSettings.qml
src/layout/: InitialLayout.qml  SimulationLayout.qml
src/section/: BottomSection.qml  RightSection.qml  TopSection.qml
src/simulation/: CarBody.qml  SensorRect.qml  Wheel.qml
